--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -22,6 +22,16 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/hooks/useSignup.js", "app/context/AuthContext.jsx", "app/hooks/useSignup.jsx", "app/auth/signup/page.jsx", "app/App.tsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "app/hooks/useSignup.jsx",
+    "app/context/AuthContext.jsx",
+    "app/hooks/useSignup.jsx",
+    "app/auth/signup/page.jsx",
+    "app/App.tsx"
+  ],
   "exclude": ["node_modules"]
 }
