--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,13 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
-    "socket.io-client": "^4.7.4",
+    "socket.io-client": "^4.7.5",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/socket.io-client": "^3.0.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
     "daisyui": "^4.6.1",
