--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,11 +24,14 @@
     "@types/react-dom": "^18.2.17",
     "@types/socket.io-client": "^3.0.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.19",
     "daisyui": "^4.6.1",
     "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "vite": "^5.0.8"
   }
 }
