--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
     "socket.io-client": "^4.7.5",
-    "zustand": "^4.5.0"
+    "zustand": "^4.5.0",
+    "vite": "^5.0.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -31,7 +32,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
-    "vite": "^5.0.8"
+    "tailwindcss": "^3.4.3"
   }
 }
