--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "express": "^4.19.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.2",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "vite": "^5.4.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0",
-    "vite": "^5.4.1"
+    "nodemon": "^3.1.0"
   }
 }
